fixed project-tab clipping issue

--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,7 @@ body {
 
 p {
     font-size: 1.5em;
-}
-
-h1 {
-    margin-bottom: -3%;
+    margin-top: -3%;
 }
 
 /*Classes: */
